# sp_traces_src

docs/log/2026-03-25_uv/: index.md
log/2026/03/: 2026-03-25_gitagent.md  2026-03-25_uv.md  2026-03.md  2026-04.md
maps/technology/: databases.md  index.md
maps/technology/ai/: index..md
maps/technology/api/: index.md
maps/technology/data/: index.md
maps/technology/text/: index.md
projects/llm_from_scratch/: README.md  pyproject.toml
projects/llm_from_scratch/docs/: index.md  input.md  self_attention.md
projects/llm_from_scratch/src/llm_from_scratch/: input_encoding_test.py
projects/llm_from_scratch/src/llm_from_scratch/input/: input_test.py
references/: index.md
topics/: kustomize.md
topics/concurrency/: latency_utilization.md  transactions.md
