[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefan Preuer", email = "3248173+stefanpreuer@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
llm-from-scratch = "llm_from_scratch:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
